# pi-topOS-Start-Menu-Quit-Options

./: .pre-commit-config.yaml  Jenkinsfile  Makefile.am  README  configure.ac  cross-compiled-build.sh
.github/workflows/: build-on-commits-to-master.yml  build-on-prs-to-master.yml  create-draft-release-on-chglog-merge.yml
data/: Makefile.am  pt-shutdown-helper.ui
debian/: changelog  control  copyright  pishutdown.lintian-overrides  pishutdown.postrm  pishutdown.preinst  pt-shutdown-helper.install  pt-shutdown-helper.lintian-overrides  pt-shutdown-helper.postrm  pt-shutdown-helper.preinst  rules
debian/bullseye-overrides/: pt-os-quit-options.lintian-overrides
po/: POTFILES.in  de.po  en_GB.po  hy.po  it.po  nb.po  pl.po  ru.po  sk.po
src/: Makefile.am  configure.ac  pishutdown.c  pt-os-quit-options.c  pt-shutdown-helper.c
src/po/: de.po
